--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
   ],
   "scripts": {
     "clean": "cross-env ./node_modules/.bin/rimraf dist",
-    "build": "babel src -d dist --extensions \".ts,.js\"",
+    "build": "cross-env npm run clean && tsc -p tsconfig.json",
     "watch": "cross-env tsc --watch",
     "test": "cross-env jest",
     "seed": "cross-env medusa seed -f ./data/seed.json",
-    "serve": "medusa start",
-    "start": "medusa develop",
-    "heroku-postbuild": "medusa migrations run",
-    "prepare": "npm run build",
+    "start": "npm run build:admin && cross-env medusa develop",
     "start:custom": "cross-env npm run build && node --preserve-symlinks index.js",
     "dev": "cross-env npm run build && medusa develop",
-    "build:admin": "cross-env medusa-admin build"
+    "build:admin": "node --max_old_space_size=2560 && npx medusa-admin build",
+    "serve": "medusa start",
+    "heroku-postbuild": "medusa migrations run",
+    "prepare": "npm run build"
   },
   "dependencies": {
     "@medusajs/admin": "^6.0.1",
