--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "lib": ["es5", "es6"],
     "target": "esnext",
     "allowJs": true,
-    "esModuleInterop": true,
+    "esModuleInterop": false,
     "module": "commonjs",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
