--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "medusa-interfaces": "^1.3.7",
     "medusa-payment-manual": "^1.0.23",
     "medusa-payment-stripe": "^6.0.0",
+    "medusa-plugin-meilisearch": "^2.0.8",
     "medusa-plugin-sendgrid": "^1.3.9",
     "typeorm": "^0.3.16"
   },
