--- a/package.json
+++ b/package.json
@@ -1,96 +1,95 @@
 {
-    "name": "medusa-starter-default",
-    "version": "0.0.1",
-    "description": "A starter for Medusa projects.",
-    "author": "Sebastian Rindom <skrindom@gmail.com>",
-    "license": "MIT",
-    "keywords": [
-        "sqlite",
-        "postgres",
-        "typescript",
-        "ecommerce",
-        "headless",
-        "medusa"
+  "name": "medusa-starter-default",
+  "version": "0.0.1",
+  "description": "A starter for Medusa projects.",
+  "author": "Sebastian Rindom <skrindom@gmail.com>",
+  "license": "MIT",
+  "keywords": [
+    "sqlite",
+    "postgres",
+    "typescript",
+    "ecommerce",
+    "headless",
+    "medusa"
+  ],
+  "scripts": {
+    "clean": "./node_modules/.bin/rimraf dist",
+    "build": "npm run clean && tsc -p tsconfig.json",
+    "watch": "tsc --watch",
+    "test": "jest",
+    "seed": "medusa seed -f ./data/seed.json",
+    "start": "npm run build && medusa migrations run && medusa develop -p=8080",
+    "dev": "npm run build && medusa develop",
+    "build:admin": "medusa-admin build"
+  },
+  "dependencies": {
+    "@babel/preset-typescript": "^7.21.5",
+    "@medusajs/admin": "^6.0.1",
+    "@medusajs/cache-inmemory": "^1.8.7",
+    "@medusajs/cache-redis": "^1.8.7",
+    "@medusajs/event-bus-local": "^1.9.4",
+    "@medusajs/event-bus-redis": "^1.8.7",
+    "@medusajs/medusa": "^1.12.1",
+    "@medusajs/medusa-cli": "^1.3.16",
+    "babel-preset-medusa-package": "^1.1.19",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "medusa-file-s3": "^1.2.0",
+    "medusa-fulfillment-manual": "^1.1.37",
+    "medusa-interfaces": "^1.3.7",
+    "medusa-payment-manual": "^1.0.24",
+    "medusa-payment-stripe": "^6.0.1",
+    "medusa-plugin-meilisearch": "^2.0.7",
+    "medusa-plugin-segment": "^1.3.5",
+    "medusa-plugin-sendgrid": "^1.3.9",
+    "meilisearch": "^0.32.5",
+    "openai": "^3.3.0",
+    "typeorm": "^0.3.16"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.21.5",
+    "@babel/core": "^7.22.1",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.2.5",
+    "babel-preset-medusa-package": "^1.1.19",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.41.0",
+    "jest": "^29.5.0",
+    "mongoose": "^7.2.2",
+    "rimraf": "^5.0.1",
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^9.4.3",
+    "typescript": "^5.1.3"
+  },
+  "jest": {
+    "globals": {
+      "ts-jest": {
+        "tsconfig": "tsconfig.spec.json"
+      }
+    },
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
     ],
-    "scripts": {
-        "clean": "./node_modules/.bin/rimraf dist",
-        "build": "babel src -d dist --extensions \".ts,.js\"",
-        "watch": "tsc --watch",
-        "test": "jest",
-        "seed": "cross-env medusa seed -f ./data/seed.json",
-        "start": "medusa develop",
-        "serve": "medusa start",
-        "heroku-postbuild": "medusa migrations run",
-        "prepare": "npm run build",
-        "start:custom": "cross-env npm run build && node --preserve-symlinks index.js",
-        "dev": "npm run build && medusa develop",
-        "build:admin": "medusa-admin build"
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "<rootDir>/node_modules/"
+    ],
+    "rootDir": "src",
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|js)$",
+    "transform": {
+      ".ts": "ts-jest"
     },
-    "dependencies": {
-        "@babel/preset-typescript": "^7.22.5",
-        "@medusajs/admin": "^6.0.1",
-        "@medusajs/cache-inmemory": "^1.8.7",
-        "@medusajs/cache-redis": "^1.8.7",
-        "@medusajs/event-bus-local": "^1.9.4",
-        "@medusajs/event-bus-redis": "^1.8.7",
-        "@medusajs/file-local": "^1.0.1",
-        "@medusajs/medusa": "^1.12.1",
-        "body-parser": "^1.20.2",
-        "cors": "^2.8.5",
-        "dotenv": "^16.1.4",
-        "express": "^4.18.2",
-        "medusa-fulfillment-manual": "^1.1.37",
-        "medusa-file-s3": "^1.2.1",
-        "medusa-interfaces": "^1.3.7",
-        "medusa-payment-manual": "^1.0.24",
-        "medusa-payment-stripe": "^6.0.1",
-        "medusa-plugin-meilisearch": "^2.0.8",
-        "medusa-plugin-segment": "^1.3.6",
-        "medusa-plugin-sendgrid": "^1.3.9",
-        "openai": "^3.2.1",
-        "typeorm": "^0.3.16"
-    },
-    "devDependencies": {
-        "@babel/cli": "^7.22.5",
-        "@babel/core": "^7.22.5",
-        "@medusajs/medusa-cli": "^1.3.16",
-        "@types/express": "^4.17.17",
-        "@types/jest": "^29.5.2",
-        "@types/node": "^20.3.1",
-        "babel-preset-medusa-package": "^1.1.19",
-        "cross-env": "^7.0.3",
-        "eslint": "^6.8.0",
-        "jest": "^27.3.1",
-        "mongoose": "^5.13.14",
-        "rimraf": "^3.0.2",
-        "ts-jest": "^29.1.0",
-        "ts-loader": "^9.4.3",
-        "typescript": "^5.1.3"
-    },
-    "jest": {
-        "globals": {
-            "ts-jest": {
-                "tsconfig": "tsconfig.spec.json"
-            }
-        },
-        "moduleFileExtensions": [
-            "js",
-            "json",
-            "ts"
-        ],
-        "testPathIgnorePatterns": [
-            "/node_modules/",
-            "<rootDir>/node_modules/"
-        ],
-        "rootDir": "src",
-        "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|js)$",
-        "transform": {
-            ".ts": "ts-jest"
-        },
-        "collectCoverageFrom": [
-            "**/*.(t|j)s"
-        ],
-        "coverageDirectory": "./coverage",
-        "testEnvironment": "node"
-    }
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "./coverage",
+    "testEnvironment": "node"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  }
 }
