--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ NPM_CONFIG_PRODUCTION=false
 NPM_CONFIG_LOGLEVEL=error
 NODE_VERBOSE=false
 NODE_ENV=production
+USE_YARN_CACHE=true
 NODE_MODULES_CACHE=true
 
 # DATABASE
