--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
         "clean": "cross-env ./node_modules/.bin/rimraf dist",
         "build": "babel src -d dist --extensions \".ts,.js\"",
         "serve": "medusa start",
-        "watch": "cross-env tsc --watch",
-        "test": "cross-env jest",
-        "seed": "cross-env medusa seed -f ./data/seed.json",
+        "watch": "tsc --watch",
+        "test": "jest",
+        "seed": "medusa seed -f ./data/seed.json",
         "start": "medusa develop",
         "heroku-postbuild": "medusa migrations run",
         "start:custom": "cross-env npm run build && node --preserve-symlinks index.js",
-        "dev": "cross-env npm run build && medusa develop",
+        "dev": "npm run build && medusa develop",
         "prepare": "npm run build",
-        "build:admin": "cross-env medusa-admin build"
+        "build:admin": "medusa-admin build"
     },
     "dependencies": {
         "@medusajs/admin": "^6.0.1",
@@ -34,6 +34,8 @@
         "@medusajs/event-bus-redis": "^1.8.8",
         "@medusajs/file-local": "^1.0.1",
         "@medusajs/medusa": "^1.12.1",
+        "@medusajs/medusa-cli": "^1.3.15",
+        "babel-preset-medusa-package": "^1.1.19",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "dotenv": "^16.1.4",
@@ -49,47 +51,50 @@
         "typeorm": "^0.3.16"
     },
     "devDependencies": {
-        "@babel/cli": "^7.14.3",
-        "@babel/core": "^7.14.3",
+        "@babel/cli": "^7.21.5",
+        "@babel/core": "^7.22.1",
         "@babel/preset-typescript": "^7.22.5",
         "@medusajs/medusa-cli": "^1.3.16",
         "@types/express": "^4.17.13",
-        "@types/jest": "^27.4.0",
-        "@types/node": "^17.0.8",
+        "@types/jest": "^29.5.2",
+        "@types/node": "^20.2.5",
         "babel-preset-medusa-package": "^1.1.19",
         "cross-env": "^7.0.3",
-        "eslint": "^6.8.0",
+        "eslint": "^8.41.0",
         "jest": "^27.3.1",
-        "mongoose": "^5.13.14",
+        "mongoose": "^7.2.2",
         "rimraf": "^3.0.2",
-        "ts-jest": "^27.0.7",
-        "ts-loader": "^9.2.6",
-        "typescript": "^5.1.3"
+        "ts-jest": "^29.1.0",
+        "ts-loader": "^9.4.3",
+        "typescript": "^4.5.2"
     },
-    "jest": {
-        "globals": {
-            "ts-jest": {
-                "tsconfig": "tsconfig.spec.json"
-            }
-        },
-        "moduleFileExtensions": [
-            "js",
-            "json",
-            "ts"
-        ],
-        "testPathIgnorePatterns": [
-            "/node_modules/",
-            "<rootDir>/node_modules/"
-        ],
-        "rootDir": "src",
-        "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|js)$",
-        "transform": {
-            ".ts": "ts-jest"
-        },
-        "collectCoverageFrom": [
-            "**/*.(t|j)s"
-        ],
-        "coverageDirectory": "./coverage",
-        "testEnvironment": "node"
-    }
+  "jest": {
+    "globals": {
+      "ts-jest": {
+        "tsconfig": "tsconfig.spec.json"
+      }
+    },
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "<rootDir>/node_modules/"
+    ],
+    "rootDir": "src",
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|js)$",
+    "transform": {
+      ".ts": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "./coverage",
+    "testEnvironment": "node"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  }
 }
