--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "build:admin": "medusa-admin build"
     },
     "dependencies": {
+        "@babel/preset-typescript": "^7.21.5",
         "@medusajs/admin": "^6.0.1",
         "@medusajs/cache-inmemory": "^1.8.8",
         "@medusajs/cache-redis": "^1.8.8",
