--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
         "build:admin": "medusa-admin build"
     },
     "dependencies": {
-        "@medusajs/admin": "^6.0.1",
+        "@medusajs/admin": "^6.0.2",
         "@medusajs/cache-inmemory": "^1.8.8",
         "@medusajs/cache-redis": "^1.8.8",
-        "@medusajs/event-bus-local": "^1.9.5",
+        "@medusajs/event-bus-local": "^1.9.6",
         "@medusajs/event-bus-redis": "^1.8.8",
         "@medusajs/file-local": "^1.0.1",
-        "@medusajs/medusa": "^1.12.1",
+        "@medusajs/medusa": "^1.12.2",
         "babel-preset-medusa-package": "^1.1.19",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
@@ -43,7 +43,7 @@
         "medusa-fulfillment-manual": "^1.1.37",
         "medusa-interfaces": "^1.3.7",
         "medusa-payment-manual": "^1.0.24",
-        "medusa-payment-stripe": "^6.0.1",
+        "medusa-payment-stripe": "^6.0.2",
         "medusa-plugin-meilisearch": "^2.0.8",
         "medusa-plugin-segment": "^1.3.6",
         "medusa-plugin-sendgrid": "^1.3.9",
@@ -56,6 +56,7 @@
         "@types/express": "^4.17.17",
         "@types/jest": "^29.5.2",
         "@types/node": "^20.2.5",
+        "@medusajs/medusa-cli": "^1.3.17",
         "babel-preset-medusa-package": "^1.1.19",
         "cross-env": "^7.0.3",
         "eslint": "^8.41.0",
