--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
         "build:admin": "medusa-admin build"
     },
     "dependencies": {
-        "@medusajs/admin": "^6.0.4",
+        "@medusajs/admin": "^6.0.5",
         "@medusajs/cache-inmemory": "^1.8.8",
         "@medusajs/cache-redis": "^1.8.8",
         "@medusajs/event-bus-local": "^1.9.6",
         "@medusajs/event-bus-redis": "^1.8.9",
         "@medusajs/file-local": "^1.0.1",
-        "@medusajs/medusa": "^1.13.0",
+        "@medusajs/medusa": "^1.13.1",
+        "@medusajs/types": "^1.10.1",
         "babel-preset-medusa-package": "^1.1.19",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
@@ -47,7 +48,9 @@
         "medusa-plugin-meilisearch": "^2.0.10",
         "medusa-plugin-segment": "^1.3.7",
         "medusa-plugin-sendgrid": "^1.3.11",
+        "medusa-plugin-auth": "^1.6.0",
         "openai": "^3.3.0",
+        "prism-react-renderer": "^2.0.4",
         "typeorm": "^0.3.17"
     },
     "devDependencies": {
@@ -56,7 +59,7 @@
         "@types/express": "^4.17.17",
         "@types/jest": "^29.5.2",
         "@types/node": "^20.2.5",
-        "@medusajs/medusa-cli": "^1.3.17",
+        "@medusajs/medusa-cli": "^1.3.18",
         "babel-preset-medusa-package": "^1.1.19",
         "cross-env": "^7.0.3",
         "eslint": "^8.41.0",
